fixes issues with hand evaluation on localhost
- adds a more explicit redirect so that the api client does not need to
  think because thinking is for nerds

I'm glad I always remember to commit changes to my code! - ty999999
